Fix header elements overlapping on smaller screens

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 main {
@@ -85,10 +86,11 @@ nav li {
 nav a {
     text-decoration: none;
     color: white;
-    font-size: 1.2rem;
+    font-size: clamp(1rem, 5vmin, 1.5rem);
     text-transform: uppercase;
     opacity: 0;
     transition: opacity 150ms ease-in-out;
+    white-space: nowrap;
 }
 
 .nav-toggle:checked ~ nav a {
@@ -100,18 +102,15 @@ nav a:hover{
     color: #FF0099;
 }
 
-.logo-image {
-    width: 300px;
-    margin: 0;
-}
-
 .logo-image .whiteLogo {
-    width: 300px;
+    width: 50vmin;
+    max-width: 300px;
 }
 
 .logo-image .pinkLogo {
     display: none;
-    width: 300px;
+    width: 50vmin;
+    max-width: 300px;
 }
 
 .logo-image:hover .pinkLogo {
@@ -151,7 +150,7 @@ header {
 .nav-toggle-label span::after {
     display: block;
     background: white;
-    height: 2px;
+    height: 3px;
     width: 2em;
     border-radius: 2px;
     position: relative;
@@ -171,7 +170,7 @@ header {
     top: 7px;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1500px) {
     .nav-toggle-label {
         display: none;
     }
@@ -180,6 +179,7 @@ header {
         display: grid;
         grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
         position: fixed;
+        gap: 1rem;
     }
 
     .logo-image {
